chat bug fix
